// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetTree inspector prepare currentSelectSource test component snapshot else test set folder to be current node 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <div
      className="inspector-asset-folder"
    >
      <h1>
        Folder
      </h1>
      <hr />
      <div
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span>
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="NoName Folder"
          />
        </div>
      </div>
    </div>
  </article>
</article>
`;

exports[`assetTree inspector prepare currentSelectSource test component snapshot else test set texture to be current node 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <h1>
        Texture
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="texture1"
          />
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            WrapS
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            WrapT
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            Mag Filter
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="1"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            Min Filter
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
            <option
              value="2"
            >
              Nearest_mipmap_nearest
            </option>
            <option
              value="3"
            >
              Linear_mipmap_nearest
            </option>
            <option
              value="4"
            >
              Nearest_mipmap_linear
            </option>
            <option
              value="5"
            >
              Linear_mipmap_linear
            </option>
          </select>
        </div>
      </article>
    </article>
  </article>
</article>
`;

exports[`assetTree inspector prepare currentSelectSource test component snapshot if hasn't current node, show nothing 1`] = `
<article
  className="wonder-inspector-component"
/>
`;

exports[`assetTree inspector prepare currentSelectSource test rename folder node test rename asset tree children node if node has ext name if rename success, the newName should include ext name 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/remove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container select-active"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              folder.aaa
            </div>
          </li>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  />
</article>
`;

exports[`assetTree inspector prepare currentSelectSource test rename folder node test rename asset tree children node if node has ext name rename input should show it 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <div
      className="inspector-asset-folder"
    >
      <h1>
        Folder
      </h1>
      <hr />
      <div
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span>
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="folder1.aaa"
          />
        </div>
      </div>
    </div>
  </article>
</article>
`;

exports[`assetTree inspector prepare currentSelectSource test rename folder node test rename to specific name 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <div
      className="inspector-asset-folder"
    >
      <h1>
        Folder
      </h1>
      <hr />
      <div
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span>
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="mickeyFolder"
          />
        </div>
      </div>
    </div>
  </article>
</article>
`;

exports[`assetTree inspector prepare currentSelectSource test rename texture node test rename asset tree children node if node has ext name rename input shouldn't show it 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <h1>
        Texture
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className="component-label"
          >
            Name
          </span>
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="texture1"
          />
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            WrapS
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            WrapT
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            Mag Filter
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="1"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
        >
          <span
            className=""
          >
            Min Filter
          </span>
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
            <option
              value="2"
            >
              Nearest_mipmap_nearest
            </option>
            <option
              value="3"
            >
              Linear_mipmap_nearest
            </option>
            <option
              value="4"
            >
              Nearest_mipmap_linear
            </option>
            <option
              value="5"
            >
              Linear_mipmap_linear
            </option>
          </select>
        </div>
      </article>
    </article>
  </article>
</article>
`;
